test_suite/alan-2022-examples/failing/007230_mutation.alan
source O begin put "" . "6" relax end
